--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <h1>QUIZ BOARD</h1>
     <h2>Instructions</h2>
+    <p>This paper contain with two section:</p>
+    <ol>
+        <li>SECTION A: You have to choose one answer.</li>
+        <li>SECTION B: You have to choose more answers.</li>
+    </ol>
 
     
 </body>
