Add another list

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 <body>
     <h1>QUIZ BOARD</h1>
     <h2>Instructions</h2>
-    <p>This paper contain with two section:</p>
     <ol>
-        <li>SECTION A: You have to choose one answer.</li>
-        <li>SECTION B: You have to choose more answers.</li>
+        <li>Switch off your phones.</li>
+        <li>This paper contain with two sections:</li>
+           <ul>
+             <li>SECTION A: You have to choose one answer.</li>
+             <li>SECTION B: You have to choose more answers.</li>
+           </ul>
+        <li>Duration: 2Hours</li>
     </ol>
+
 
     
 </body>
