--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         <li>Duration: 2Hours</li>
     </ol>
     <h2>SECTION A</h2>
+    <p>Q1. How many bits make a byte?</p>
+    <form>
+        <input type="radio" name="answer" value="answer">16 bits<br>
+        <input type="radio" name="answer" value="answer">8 bits<br>
+        <input type="radio" name="answer" value="answer">24 bits<br>
+        <input type="radio" name="answer" value="answer">12 bits<br>
+    </form>
+
 
 
     
