Add a paragraph and its form

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         <input type="radio" name="answer" value="answer">24 bits<br>
         <input type="radio" name="answer" value="answer">12 bits<br>
     </form>
+    
+    <p>Q2. What is the meaning of (CPU)?</p>
+    <form>
+        <input type="radio" name="answer" value="answer">Central Processing Unit<br>
+        <input type="radio" name="answer" value="answer">Critical Processing Unit<br>
+        <input type="radio" name="answer" value="answer">Crucial Processing Unit<br>
+        <input type="radio" name="answer" value="answer">Central Priting Unit<br>
+    </form>
+    
 
 
 
