Add another paragraph and its form

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Instructions</h2>
     <ol>
         <li>Switch off your phones.</li>
-        <li>This paper contain with two sections:</li>
+        <li>These questions contain with two sections:</li>
            <ul>
              <li>SECTION A: You have to choose one answer.</li>
              <li>SECTION B: You have to choose more answers.</li>
@@ -34,6 +34,15 @@
         <input type="radio" name="answer" value="answer">Crucial Processing Unit<br>
         <input type="radio" name="answer" value="answer">Central Priting Unit<br>
     </form>
+
+    <p>Q3. The process of starting or restarting a computer is called?</p>
+    <form>
+        <input type="radio" name="answer" value="answer">Start up point<br>
+        <input type="radio" name="answer" value="answer">Booting<br>
+        <input type="radio" name="answer" value="answer">Connecting<br>
+        <input type="radio" name="answer" value="answer">Resetting<br>
+    </form>
+    
     
 
 
