Add another paragraph and its form

--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
         <input type="radio" name="answer" value="answer">Connecting<br>
         <input type="radio" name="answer" value="answer">Resetting<br>
     </form>
+
+    <p>Q4. One component of the motherboard is:</p>
+    <form>
+        <input type="radio" name="answer" value="answer">Processor<br>
+        <input type="radio" name="answer" value="answer">Bios<br>
+        <input type="radio" name="answer" value="answer">Computer Chip<br>
+        <input type="radio" name="answer" value="answer">Transistor<br>
+    </form>
+
+
+
     
     
 
