Add another list

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
              <li>SECTION A: You have to choose one answer.</li>
              <li>SECTION B: You have to choose more answers.</li>
            </ul>
+        <li>Answer all questions</li>   
         <li>Duration: 2Hours</li>
     </ol>
     <h2>SECTION A</h2>
