--- a/index.html
+++ b/index.html
@@ -54,11 +54,18 @@
 
     <p>Q5. The system unit is referred to as the:</p>
     <form>
-        <input type="radio" name="answer" value="answer">Central Processing Unit<br>
-        <input type="radio" name="answer" value="answer">The Heart of the Computer<br>
-        <input type="radio" name="answer" value="answer">The hard drive<br>
-        <input type="radio" name="answer" value="answer">System Software<br>
+        <input type="radio" name="answer" value="">Central Processing Unit<br>
+        <input type="radio" name="answer" value="">The Heart of the Computer<br>
+        <input type="radio" name="answer" value="">The hard drive<br>
+        <input type="radio" name="answer" value="">System Software<br>
     </form>
+    
+    <h2>SECTION B</h2>
+    <p>Q1. What factors are important to you when buying a software product?</p>
+    <form>
+        <label><input type="checkbox" value="">Price</label>
+    </form>
+
 
 
 
