Add another paragraph and its form

--- a/index.html
+++ b/index.html
@@ -22,34 +22,34 @@
     <h2>SECTION A</h2>
     <p>Q1. How many bits make a byte?</p>
     <form>
-        <input type="radio" name="answer" value="answer">16 bits<br>
-        <input type="radio" name="answer" value="answer">8 bits<br>
-        <input type="radio" name="answer" value="answer">24 bits<br>
-        <input type="radio" name="answer" value="answer">12 bits<br>
+        <input type="radio" name="answer" value="">16 bits<br>
+        <input type="radio" name="answer" value="">8 bits<br>
+        <input type="radio" name="answer" value="">24 bits<br>
+        <input type="radio" name="answer" value="">12 bits<br>
     </form>
     
     <p>Q2. What is the meaning of (CPU)?</p>
     <form>
-        <input type="radio" name="answer" value="answer">Central Processing Unit<br>
-        <input type="radio" name="answer" value="answer">Critical Processing Unit<br>
-        <input type="radio" name="answer" value="answer">Crucial Processing Unit<br>
-        <input type="radio" name="answer" value="answer">Central Priting Unit<br>
+        <input type="radio" name="answer" value="">Central Processing Unit<br>
+        <input type="radio" name="answer" value="">Critical Processing Unit<br>
+        <input type="radio" name="answer" value="">Crucial Processing Unit<br>
+        <input type="radio" name="answer" value="">Central Priting Unit<br>
     </form>
 
     <p>Q3. The process of starting or restarting a computer is called?</p>
     <form>
-        <input type="radio" name="answer" value="answer">Start up point<br>
-        <input type="radio" name="answer" value="answer">Booting<br>
-        <input type="radio" name="answer" value="answer">Connecting<br>
-        <input type="radio" name="answer" value="answer">Resetting<br>
+        <input type="radio" name="answer" value="">Start up point<br>
+        <input type="radio" name="answer" value="">Booting<br>
+        <input type="radio" name="answer" value="">Connecting<br>
+        <input type="radio" name="answer" value="">Resetting<br>
     </form>
 
     <p>Q4. One component of the motherboard is:</p>
     <form>
-        <input type="radio" name="answer" value="answer">Processor<br>
-        <input type="radio" name="answer" value="answer">Bios<br>
-        <input type="radio" name="answer" value="answer">Computer Chip<br>
-        <input type="radio" name="answer" value="answer">Transistor<br>
+        <input type="radio" name="answer" value="">Processor<br>
+        <input type="radio" name="answer" value="">Bios<br>
+        <input type="radio" name="answer" value="">Computer Chip<br>
+        <input type="radio" name="answer" value="">Transistor<br>
     </form>
 
     <p>Q5. The system unit is referred to as the:</p>
@@ -64,6 +64,11 @@
     <p>Q1. What factors are important to you when buying a software product?</p>
     <form>
         <label><input type="checkbox" value="">Price</label>
+        <label><input type="checkbox" value="">Usability</label>
+        <label><input type="checkbox" value="">Features</label>
+        <label><input type="checkbox" value="">Support</label>
+        
+
     </form>
 
 
