--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quiz-B</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
  <body>
     <div class="container">
@@ -71,6 +72,6 @@
 
 
      </form>
-
-    </body>
+    </div>
+  </body>
 </html>
