--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quiz-B</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
  <body>
     <div class="container">
-      <h1>QUIZ BOARD</h1>
-      <h2>Instructions</h2>
-      <ol>
-        <li>Switch off your phones.</li>
-        <li>These questions contain with two sections:</li>
-           <ul>
-             <li>SECTION A: You have to choose one answer.</li>
-             <li>SECTION B: You have to choose more answers.</li>
-           </ul>
-        <li>Answer all questions</li>   
-        <li>Duration: 2Hours</li>
-      </ol>
+      <div class="jumbotron">
+         <h1>QUIZ BOARD</h1>
+      
+         <h2>Instructions</h2>
+         <ol>
+            <li>Switch off your phones.</li>
+            <li>These questions contain with two sections:</li>
+              <ul>
+                 <li>SECTION A: You have to choose one answer.</li>
+                 <li>SECTION B: You have to choose more answers.</li>
+              </ul>
+           <li>Answer all questions</li>   
+           <li>Duration: 2Hours</li>
+         </ol>
       <h2>SECTION A</h2>
       <p>Q1. How many bits make a byte?</p>
       <form>
@@ -64,14 +67,13 @@
     
      <h2>SECTION B</h2>
      <p>Q1. What factors are important to you when buying a software product?</p>
-     <form>
+      <form>
         <label><input type="checkbox" value="">Price</label><br>
         <label><input type="checkbox" value="">Usability</label><br>
         <label><input type="checkbox" value="">Features</label><br>
         <label><input type="checkbox" value="">Support</label><br>
-
-
-     </form>
+      </form>
+     </div>
     </div>
   </body>
 </html>
