Add another elements

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
            <li>Answer all questions</li>   
            <li>Duration: 2Hours</li>
          </ol>
-      <h2>SECTION A</h2>
+       <div</div>  
+      <h2 class="panel panel-heading">SECTION A</h2>
       <p>Q1. How many bits make a byte?</p>
       <form>
         <input type="radio" name="answer" value="">16 bits<br>
@@ -65,7 +66,7 @@
         <input type="radio" name="answer" value="">System Software<br>
      </form>
     
-     <h2>SECTION B</h2>
+     <h2  class="panel panel-heading">SECTION B</h2>
      <p>Q1. What factors are important to you when buying a software product?</p>
       <form>
         <label><input type="checkbox" value="">Price</label><br>
