--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
  <body>
     <div class="container">
       <div class="jumbotron">
-         <h1>QUIZ BOARD</h1>
+         <div class="well">
+            <h1>QUIZ BOARD</h1>
+            <img src="https://qph.fs.quoracdn.net/main-qimg-3a9e78ba0b1a2d2e1a1b2b6799277d13">
+         </div>
       
          <h2>Instructions</h2>
          <ol>
@@ -97,11 +100,11 @@
             <h2 class="panel panel-heading">SECTION B</h2>
             <div class="panel panel-default">
             <div class="panel panel-default">
-               <p class="panel-title">Q1. What factors are important to you when buying a software product?</p>
+               <p class="panel-title">Q1. What factors are important to you when buying a software product?(choose two)</p>
             </div>
             <div class="panel-body">
-                  <label><input type="checkbox"  id ="numberOne"  value="True" class="correct" required>Price</label><br>
-                  <label><input type="checkbox"  id ="numberTwo"  value="True" class="correct" required>Usability</label><br>
+                  <label><input type="checkbox"  id ="numberOne"  value="True" class="correct">Price</label><br>
+                  <label><input type="checkbox"  id ="numberTwo"  value="True" class="correct" >Usability</label><br>
                   <label><input type="checkbox"  id ="numberThre" value="False" required>Features</label><br>
                   <label><input type="checkbox"  id ="numberFour"  value="True" class="correct">Support</label><br>
                </div>
