--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<>>, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>login</title>
 </head>
 <body>
     <h1>Login Form</h1>
+    <h2>Personal Information</h2>
     <form>
         First name:<br>
         <input type="text" name="firstname" value=""><br>
         Last name:<br>
-        <input type="text" name="lastname" value=""><br><br>
+        <input type="text" name="lastname" value=""><br>
+        Email:<br>
+        <input type="email" name="email" value=""><br>
+        Telephone:<br>
+        <input type="number" name="fone-number" value=""><br>
+        RegNumber:<br>
+        <input type="number" name="number" value=""><br><br>
         <input type="submit" value="Submit">
         
     </form>
