--- a/form1.html
+++ b/form1.html
@@ -73,7 +73,7 @@
             </div>
             <div class="panel panel-default">
                <div class="panel panel-default">
-               <p class="panel-title">Q4. One component of the motherboard is:</p>
+               <p class="panel-title">Q4. One component of the motherboard is:<srtong></p>
                </div>
                <div class="panel-body">
                
@@ -105,8 +105,8 @@
             <div class="panel-body">
                   <label><input type="checkbox"  id ="numberOne"  value="True" class="correct">Price</label><br>
                   <label><input type="checkbox"  id ="numberTwo"  value="True" class="correct">Usability</label><br>
-                  <label><input type="checkbox"  id ="numberThre" value="False" required>Features</label><br>
-                  <label><input type="checkbox"  id ="numberFour"  value="True" class="correct">Support</label><br>
+                  <label><input type="checkbox"  id ="numberThre" value="False">Features</label><br>
+                  <label><input type="checkbox"  id ="numberFour" value="True" class="correct">Support</label><br>
                </div>
                   
             </div>
