--- a/form1.html
+++ b/form1.html
@@ -100,7 +100,7 @@
             <h2 class="panel panel-heading">SECTION B</h2>
             <div class="panel panel-default">
             <div class="panel panel-default">
-               <p class="panel-title">Q1. What factors are important to you when buying a software product?(choose two)</p>
+               <p class="panel-title">Q1. What factors are important to you when buying a software product?(choose more)</p>
             </div>
             <div class="panel-body">
                   <label><input type="checkbox"  id ="numberOne"  value="True" class="correct">Price</label><br>
