--- a/form1.html
+++ b/form1.html
@@ -113,7 +113,11 @@
          </div>
          <input type="submit" class="btn btn-primary" value="Submit">
       </form>
-      <h1 id="result"></h1>
+      </div>
+    </div>
+        <div id="pass">
+          <h1 id="result"></h1>
+        </div>
        <script
        src="https://code.jquery.com/jquery-3.3.1.min.js"
        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
